# XPBD-Rods

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: cantilever_rod_config.yaml  config.yaml  config2.yaml  ctr_config.yaml  hexbug_config.yaml  joints_config.yaml  pendulum_config.yaml  rpsrobot_config.yaml
config/bowling/: bowling.yaml
config/collision_test/: box_box.yaml  box_rod.yaml  plane_box.yaml  plane_rod.yaml  plane_sphere.yaml  rod_rod.yaml  sphere_box.yaml  sphere_rod.yaml  sphere_sphere.yaml
config/convergence/: convergence.yaml
config/figs/: global_solve.yaml  many_elements.yaml  pendulum_config.yaml  plectoneme.yaml  rpsrobot_config.yaml  shear_locking_linear.yaml  shear_locking_nonlinear.yaml  single_element.yaml
config/friction_test/: box_rod.yaml  box_slide.yaml  plane_box.yaml  rod_rod.yaml
config/rigid_body/: funky_pendulum.yaml  joints_config.yaml  revolute_test.yaml  spherical_test.yaml
config/ros/: rod.yaml
config/stacking_test/: boxes.yaml  card_tower.yaml
include/collision/: CollisionBucket.hpp  CollisionObject.hpp  CollisionScene.hpp  CollisionTypes.hpp  SpatialHasher.hpp
include/collision/helper/: BoxBoxCollider.hpp  RodElementCollider.hpp
include/collision/sdf/: BoxSDF.hpp  PlaneSDF.hpp  SDF.hpp  SphereSDF.hpp
include/common/: ArrayConcatenate.hpp  GaussQuadratureHelper.hpp  Mesh.hpp  TypeList.hpp  VariadicVectorContainer.hpp  VectorHandle.hpp  colors.hpp  common.hpp  config_containers.hpp  constraint_containers.hpp  constraint_projector_containers.hpp  math.hpp  object_containers.hpp  todo.hpp
include/config/: AllObjectConfigs.hpp  CollisionSceneConfig.hpp  Config.hpp  HexBugConfig.hpp  HexBugHabitatConfig.hpp  MeshRenderConfig.hpp  ObjectRenderConfig.hpp  PlectonemeConfig.hpp  RPSRobotConfig.hpp  RodConfig.hpp  RodConvergenceSimulationConfig.hpp  SimulationConfig.hpp  SimulationRenderConfig.hpp  XPBDConcentricTubeRobotConfig.hpp  XPBDObjectConfig.hpp  XPBDPendulumConfig.hpp  XPBDPlaneConfig.hpp  XPBDRigidBodyConfig.hpp  XPBDRigidBoxConfig.hpp  XPBDRigidSphereConfig.hpp
include/constraint/: AlignedAxesConstraint.hpp  AllConstraints.hpp  AttachmentConstraint.hpp  Constraint.hpp  CoordinateConstraint.hpp  FixedJointConstraint.hpp  FixedParticleConstraint.hpp  PointLineConstraint.hpp  PrismaticJointConstraint.hpp  PrismaticJointLimitConstraint.hpp  RevoluteJointConstraint.hpp  RevoluteJointLimitConstraint.hpp  RevoluteJointVelocityMotorConstraint.hpp  RigidBodyCollisionConstraint.hpp  RodElasticConstraint.hpp  RodElasticGaussPointConstraint.hpp  RodRigidBodyCollisionConstraint.hpp  RodRodCollisionConstraint.hpp  SphericalJointConstraint.hpp  SphericalJointSwingLimitConstraint.hpp  XPBDConstraintProjector.hpp  XPBDConstraintProjector_Base.hpp  XPBDSeparateConstraintProjector.hpp
include/graphics/: BoxGraphicsObject.hpp  CustomVTKInteractorStyle.hpp  GraphicsObject.hpp  GraphicsScene.hpp  HigherOrderRodGraphicsObject.hpp  MeshGraphicsObject.hpp  PlaneGraphicsObject.hpp  RodGraphicsObject.hpp  SphereGraphicsObject.hpp  VTKUtils.hpp  vtkCustomInteractorStyle.hpp
include/rod/: CrossSection.hpp  XPBDRod.hpp  XPBDRodNode.hpp
include/simobject/: AABB.hpp  OrientedParticle.hpp  Particle.hpp  XPBDObject_Base.hpp
include/simulation/: BowlingSimulation.hpp  RodConvergenceSimulation.hpp  RodGraspingSimulation.hpp  Simulation.hpp  SimulationLogger.hpp
include/solver/: BlockBandedSolver.hpp  BlockThomasSolver.hpp  GaussSeidelSolver.hpp
resource/: surgery_1k.hdr
resource/meshes/: hexbug_plastic_bottom.STL  hexbug_plastic_top.STL  pendulum_base.stl  pendulum_female.stl  pendulum_male.stl  pendulum_tip.stl
ros_workspace/launch/: sim_bridge.launch.py
ros_workspace/src/sim_bridge/: CMakeLists.txt  package.xml
ros_workspace/src/sim_bridge/include/sim_bridge/: SimBridge.hpp
ros_workspace/src/sim_bridge/src/: SimBridge.cpp  sim_bridge_node.cpp
src/collision/: CMakeLists.txt  CollisionObject.cpp  CollisionScene.cpp  SpatialHasher.cpp
src/collision/sdf/: BoxSDF.cpp  PlaneSDF.cpp  SphereSDF.cpp
src/common/: CMakeLists.txt  ExplicitTemplateInstantiations.cpp  Mesh.cpp
src/constraint/: AlignedAxesConstraint.cpp  AttachmentConstraint.cpp  CMakeLists.txt  CoordinateConstraint.cpp  FixedJointConstraint.cpp  FixedParticleConstraint.cpp  PointLineConstraint.cpp  PrismaticJointConstraint.cpp  PrismaticJointLimitConstraint.cpp  RevoluteJointConstraint.cpp  RevoluteJointLimitConstraint.cpp  RevoluteJointVelocityMotorConstraint.cpp  RigidBodyCollisionConstraint.cpp  RodElasticConstraint.cpp  RodElasticGaussPointConstraint.cpp  RodRigidBodyCollisionConstraint.cpp  RodRodCollisionConstraint.cpp  SphericalJointConstraint.cpp  SphericalJointSwingLimitConstraint.cpp
src/exec/: bowling_sim.cpp  main.cpp  rod_convergence_sim.cpp  rod_grasping_sim.cpp
src/graphics/: BoxGraphicsObject.cpp  CMakeLists.txt  CustomVTKInteractorStyle.cpp  GraphicsScene.cpp  HigherOrderRodGraphicsObject.cpp  MeshGraphicsObject.cpp  PlaneGraphicsObject.cpp  RodGraphicsObject.cpp  SphereGraphicsObject.cpp
src/rod/: CMakeLists.txt  XPBDRod.cpp
src/simobject/: CMakeLists.txt  OrientedParticle.cpp  Particle.cpp  XPBDObject_Base.cpp
src/simobject/group/: HexBug.cpp  HexBugHabitat.cpp  Plectoneme.cpp  RPSRobot.cpp  XPBDConcentricTubeRobot.cpp  XPBDObjectGroup_Base.cpp  XPBDPendulum.cpp
src/simobject/rigidbody/: XPBDPlane.cpp  XPBDRigidBody_Base.cpp  XPBDRigidBox.cpp  XPBDRigidSphere.cpp
src/simobject/rod/: CMakeLists.txt  CubicHermiteRodElement.cpp  RigidBodyRodElement.cpp  RodCollisionSegment.cpp  RodElement.cpp  XPBDCubicHermiteRod.cpp  XPBDHigherOrderRod.cpp  XPBDRod.cpp  XPBDRodSegment.cpp
src/simulation/: BowlingSimulation.cpp  CMakeLists.txt  RodConvergenceSimulation.cpp  RodGraspingSimulation.cpp  Simulation.cpp  SimulationLogger.cpp
src/solver/: BlockThomasSolver.cpp  CMakeLists.txt  GaussSeidelSolver.cpp
test/: test_banded.cpp  test_collision.cpp  test_constraint_gradients.cpp  test_gradient.cpp  test_pbr.cpp  test_rod.cpp  test_rod_collision_optimization.cpp  test_thomas.cpp  test_thomas_vs_banded.cpp  test_vtk.cpp
(+34 files in other folders)
